fixed z-index issue with experience open/close button on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -231,6 +231,7 @@ h1{
     background: $primaryColor;
     color: #fff;
     border-color: #fff;
+    z-index: 10;
 }
 
 .experience--button:hover {
